--- a/go/bencode/Changes.txt
+++ b/go/bencode/Changes.txt
@@ -3,3 +3,6 @@ Initial Release.
 
 [1.1]
 Added Support for new recognized Types during Encoding.
+
+[1.2]
+Added Support for negative ASCII Numbers.
